--- a/index.html
+++ b/index.html
@@ -1,74 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Se mi san Valentin</title>
-    <link rel="stylesheet" href="styles.css" />
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Para Andruw</title>
+  <link rel="stylesheet" href="./style.css">
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap"
-      rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap"
-      rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap"
-      rel="stylesheet" />
-  </head>
-
-  <body class="not-loaded">
-    <h1>¿Queres ser mi san valentin?</h1>
-    <p class="my-name">-Alejandrito</p>
-    <div class="rain"></div>
-    <div class="flower" id="animation-flower">
-      <div class="f-wrapper">
-        <div class="flower__line"></div>
-        <div class="f">
-          <div class="flower__leaf flower__leaf--1"></div>
-          <div class="flower__leaf flower__leaf--2"></div>
-          <div class="flower__leaf flower__leaf--3"></div>
-          <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__leaf flower__leaf--5"></div>
-          <div class="flower__leaf flower__leaf--6"></div>
-          <div class="flower__leaf flower__leaf--7"></div>
-          <div
-            class="flower__leaf flower__leaf--8 flower__fall-down--yellow"></div>
+</head>
+<body>
+<div class="envlope-wrapper">
+    <div id="envelope" class="close">
+        <div class="front flap"></div>
+        <div class="front pocket"></div>
+        <div class="letter">
+            <div class="words line1"></div>
+            <div class="words line2"></div>
+            <div class="words line3"></div>
+            <div class="words line4"></div>
         </div>
-      </div>
-
-      <div class="f-wrapper f-wrapper--2">
-        <div class="flower__line"></div>
-        <div class="f">
-          <div class="flower__leaf flower__leaf--1"></div>
-          <div class="flower__leaf flower__leaf--2"></div>
-          <div class="flower__leaf flower__leaf--3"></div>
-          <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__leaf flower__leaf--5"></div>
-          <div class="flower__leaf flower__leaf--6"></div>
-          <div class="flower__leaf flower__leaf--7"></div>
-          <div
-            class="flower__leaf flower__leaf--8 flower__fall-down--pink"></div>
+        <div class="hearts">
+            <div class="heart a1"></div>
+            <div class="heart a2"></div>
+            <div class="heart a3"></div>
         </div>
-      </div>
-
-      <div class="f-wrapper f-wrapper--3">
-        <div class="flower__line"></div>
-        <div class="f">
-          <div class="flower__leaf flower__leaf--1"></div>
-          <div class="flower__leaf flower__leaf--2"></div>
-          <div class="flower__leaf flower__leaf--3"></div>
-          <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__leaf flower__leaf--5"></div>
-          <div class="flower__leaf flower__leaf--6"></div>
-          <div class="flower__leaf flower__leaf--7"></div>
-          <div
-            class="flower__leaf flower__leaf--8 flower__fall-down--purple"></div>
-        </div>
-      </div>
-      <div class="flower__glass"></div>
     </div>
+</div>
 
-    <script src="script.js"></script>
-  </body>
+<div id="message-container">
+    <div class="message-letter">
+        <p class="message-title">Andruwcito...</p>
+        <p class="message-title">¿Queres ser mi San Valentín?</p>
+        <p class="message-text">Que lindo tenerte en mi vida y poder compartir esta fecha especial con vos. Reserva tu tarde del 14 ;)</p>
+        <p class="message-text">Te quiero mucho (15), espero que te guste este pequeño detalle.</p>
+        <p class="message-text">-Ale</p>
+    </div>
+</div>
+
+<div class="reset">
+    <button id="open">Abrir</button>
+    <button id="reset">Reset</button>
+</div>
+    
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+  <script  src="./script.js"></script>
+
+</body>
 </html>
